jk_model_54603.out
Node: comp-gpu01
Start: 2024-06-01-13:27:01
Working dir: /home/s214704/JK_bachelor

/var/lib/slurm/slurmd/job54603/slurm_script: line 24: /home/s214704/JK_bachelor/.bashrc: No such file or directory
Traceback (most recent call last):
  File "/home/s214704/JK_bachelor/OutlierDetection/training_conv.py", line 6, in <module>
    from AE_functions import *
  File "/home/s214704/JK_bachelor/OutlierDetection/AE_functions.py", line 191
    nn.Conv2d(hidden_dim_3, latent_dim, kernel_size = kernel_size, stride = stride, padding = padding), # output: 16x12x128
    ^
SyntaxError: invalid syntax
Done: 2024-06-01-13:27:03
